# sprinkler-k8s

./: Cargo.toml  README.md  build.sh  update-agent.sh
fixtures/: ProcessEvent.asm  sample.txt  shiplift-event.txt  valgrind.txt
src/: config.rs  docker_oom.rs  main.rs  sprinkler-agent.rs  sprinkler-master.rs
systemd/: sprinkler-agent.service  sprinkler-master.service
