[package]
name = "sprinkler-k8s"
version = "0.1.0"
authors = ["Alex Yang <aleozlx@gmail.com>"]
edition = "2018"

[[bin]]
name = "sprinkler-master"
path = "src/sprinkler-master.rs"
required-features = ["sprinkler/master"]

[[bin]]
name = "sprinkler-agent"
path = "src/sprinkler-agent.rs"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
clap = "2.32.0"
sys-info = "0.5"
tokio = "0.1"
futures = "0.1"
shiplift = "0.5"
sprinkler = { git = "https://github.com/aleozlx/sprinkler.git" }
